coding_systems/snomedct/parser_utils/ECLsubsetParser.py
# Generated from ECLsubset.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class ECLsubsetParser(Parser):

    grammarFileName = "ECLsubset.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "<INVALID>",
        "'\u0009'",
        "'\u000A'",
        "'\u000D'",
        "' '",
        "'!'",
        "'\"'",
        "'#'",
        "'$'",
        "'%'",
        "'&'",
        "'''",
        "'('",
        "')'",
        "'*'",
        "'+'",
        "','",
        "'-'",
        "'.'",
        "'/'",
        "'0'",
        "'1'",
        "'2'",
        "'3'",
        "'4'",
        "'5'",
        "'6'",
        "'7'",
        "'8'",
        "'9'",
        "':'",
        "';'",
        "'<'",
        "'='",
        "'>'",
        "'?'",
        "'@'",
        "'A'",
        "'B'",
        "'C'",
        "'D'",
        "'E'",
        "'F'",
        "'G'",
        "'H'",
        "'I'",
        "'J'",
        "'K'",
        "'L'",
        "'M'",
        "'N'",
        "'O'",
        "'P'",
        "'Q'",
        "'R'",
        "'S'",
        "'T'",
        "'U'",
        "'V'",
        "'W'",
        "'X'",
        "'Y'",
        "'Z'",
        "'['",
        "'\\'",
        "']'",
        "'^'",
        "'_'",
        "'`'",
        "'a'",
        "'b'",
        "'c'",
        "'d'",
        "'e'",
        "'f'",
        "'g'",
        "'h'",
        "'i'",
        "'j'",
        "'k'",
        "'l'",
        "'m'",
        "'n'",
        "'o'",
        "'p'",
        "'q'",
        "'r'",
        "'s'",
        "'t'",
        "'u'",
        "'v'",
        "'w'",
        "'x'",
        "'y'",
        "'z'",
        "'{'",
        "'|'",
        "'}'",
        "'~'",
    ]

    symbolicNames = [
        "<INVALID>",
        "UTF8_LETTER",
        "TAB",
        "LF",
        "CR",
        "SPACE",
        "EXCLAMATION",
        "QUOTE",
        "POUND",
        "DOLLAR",
        "PERCENT",
        "AMPERSAND",
        "APOSTROPHE",
        "LEFT_PAREN",
        "RIGHT_PAREN",
        "ASTERISK",
        "PLUS",
        "COMMA",
        "DASH",
        "PERIOD",
        "SLASH",
        "ZERO",
        "ONE",
        "TWO",
        "THREE",
        "FOUR",
        "FIVE",
        "SIX",
        "SEVEN",
        "EIGHT",
        "NINE",
        "COLON",
        "SEMICOLON",
        "LESS_THAN",
        "EQUALS",
        "GREATER_THAN",
        "QUESTION",
        "AT",
        "CAP_A",
        "CAP_B",
        "CAP_C",
        "CAP_D",
        "CAP_E",
        "CAP_F",
        "CAP_G",
        "CAP_H",
        "CAP_I",
        "CAP_J",
        "CAP_K",
        "CAP_L",
        "CAP_M",
        "CAP_N",
        "CAP_O",
        "CAP_P",
        "CAP_Q",
        "CAP_R",
        "CAP_S",
        "CAP_T",
        "CAP_U",
        "CAP_V",
        "CAP_W",
        "CAP_X",
        "CAP_Y",
        "CAP_Z",
        "LEFT_BRACE",
        "BACKSLASH",
        "RIGHT_BRACE",
        "CARAT",
        "UNDERSCORE",
        "ACCENT",
        "A",
        "B",
        "C",
        "D",
        "E",
        "F",
        "G",
        "H",
        "I",
        "J",
        "K",
        "L",
        "M",
        "N",
        "O",
        "P",
        "Q",
        "R",
        "S",
        "T",
        "U",
        "V",
        "W",
        "X",
        "Y",
        "Z",
        "LEFT_CURLY_BRACE",
        "PIPE",
        "RIGHT_CURLY_BRACE",
        "TILDE",
    ]

    RULE_expressionconstraint = 0
    RULE_compoundexpressionconstraint = 1
    RULE_disjunctionexpressionconstraint = 2
    RULE_exclusionexpressionconstraint = 3
    RULE_subexpressionconstraint = 4
    RULE_eclfocusconcept = 5
    RULE_eclconceptreference = 6
    RULE_conceptid = 7
    RULE_constraintoperator = 8
    RULE_descendantof = 9
    RULE_descendantorselfof = 10
    RULE_childof = 11
    RULE_ancestorof = 12
    RULE_ancestororselfof = 13
    RULE_parentof = 14
    RULE_disjunction = 15
    RULE_exclusion = 16
    RULE_sctid = 17
    RULE_ws = 18
    RULE_mws = 19
    RULE_comment = 20
    RULE_nonstarchar = 21
    RULE_starwithnonfslash = 22
    RULE_nonfslash = 23
    RULE_sp = 24
    RULE_htab = 25
    RULE_cr = 26
    RULE_lf = 27
    RULE_qm = 28
    RULE_bs = 29
    RULE_digit = 30
    RULE_zero = 31
    RULE_digitnonzero = 32
    RULE_nonwsnonpipe = 33
    RULE_anynonescapedchar = 34
    RULE_escapedchar = 35

    ruleNames = [
        "expressionconstraint",
        "compoundexpressionconstraint",
        "disjunctionexpressionconstraint",
        "exclusionexpressionconstraint",
        "subexpressionconstraint",
        "eclfocusconcept",
        "eclconceptreference",
        "conceptid",
        "constraintoperator",
        "descendantof",
        "descendantorselfof",
        "childof",
        "ancestorof",
        "ancestororselfof",
        "parentof",
        "disjunction",
        "exclusion",
        "sctid",
        "ws",
        "mws",
        "comment",
        "nonstarchar",
        "starwithnonfslash",
        "nonfslash",
        "sp",
        "htab",
        "cr",
        "lf",
        "qm",
        "bs",
        "digit",
        "zero",
        "digitnonzero",
        "nonwsnonpipe",
        "anynonescapedchar",
        "escapedchar",
    ]

    EOF = Token.EOF
    UTF8_LETTER = 1
    TAB = 2
    LF = 3
    CR = 4
    SPACE = 5
    EXCLAMATION = 6
    QUOTE = 7
    POUND = 8
    DOLLAR = 9
    PERCENT = 10
    AMPERSAND = 11
    APOSTROPHE = 12
    LEFT_PAREN = 13
    RIGHT_PAREN = 14
    ASTERISK = 15
    PLUS = 16
    COMMA = 17
    DASH = 18
    PERIOD = 19
    SLASH = 20
    ZERO = 21
    ONE = 22
    TWO = 23
    THREE = 24
    FOUR = 25
    FIVE = 26
    SIX = 27
    SEVEN = 28
    EIGHT = 29
    NINE = 30
    COLON = 31
    SEMICOLON = 32
    LESS_THAN = 33
    EQUALS = 34
    GREATER_THAN = 35
    QUESTION = 36
    AT = 37
    CAP_A = 38
    CAP_B = 39
    CAP_C = 40
    CAP_D = 41
    CAP_E = 42
    CAP_F = 43
    CAP_G = 44
    CAP_H = 45
    CAP_I = 46
    CAP_J = 47
    CAP_K = 48
    CAP_L = 49
    CAP_M = 50
    CAP_N = 51
    CAP_O = 52
    CAP_P = 53
    CAP_Q = 54
    CAP_R = 55
    CAP_S = 56
    CAP_T = 57
    CAP_U = 58
    CAP_V = 59
    CAP_W = 60
    CAP_X = 61
    CAP_Y = 62
    CAP_Z = 63
    LEFT_BRACE = 64
    BACKSLASH = 65
    RIGHT_BRACE = 66
    CARAT = 67
    UNDERSCORE = 68
    ACCENT = 69
    A = 70
    B = 71
    C = 72
    D = 73
    E = 74
    F = 75
    G = 76
    H = 77
    I = 78
    J = 79
    K = 80
    L = 81
    M = 82
    N = 83
    O = 84
    P = 85
    Q = 86
    R = 87
    S = 88
    T = 89
    U = 90
    V = 91
    W = 92
    X = 93
    Y = 94
    Z = 95
    LEFT_CURLY_BRACE = 96
    PIPE = 97
    RIGHT_CURLY_BRACE = 98
    TILDE = 99

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ExpressionconstraintContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ws(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ECLsubsetParser.WsContext)
            else:
                return self.getTypedRuleContext(ECLsubsetParser.WsContext, i)

        def compoundexpressionconstraint(self):
            return self.getTypedRuleContext(
                ECLsubsetParser.CompoundexpressionconstraintContext, 0
            )

        def subexpressionconstraint(self):
            return self.getTypedRuleContext(
                ECLsubsetParser.SubexpressionconstraintContext, 0
            )

        def getRuleIndex(self):
            return ECLsubsetParser.RULE_expressionconstraint

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitExpressionconstraint"):
                return visitor.visitExpressionconstraint(self)
            else:
                return visitor.visitChildren(self)

    def expressionconstraint(self):

        localctx = ECLsubsetParser.ExpressionconstraintContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 0, self.RULE_expressionconstraint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.ws()
            self.state = 75
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 0, self._ctx)
            if la_ == 1:
                self.state = 73
                self.compoundexpressionconstraint()
                pass

            elif la_ == 2:
                self.state = 74
                self.subexpressionconstraint()
                pass

            self.state = 77
            self.ws()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CompoundexpressionconstraintContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def disjunctionexpressionconstraint(self):
            return self.getTypedRuleContext(
                ECLsubsetParser.DisjunctionexpressionconstraintContext, 0
            )

        def exclusionexpressionconstraint(self):
            return self.getTypedRuleContext(
                ECLsubsetParser.ExclusionexpressionconstraintContext, 0
            )

        def getRuleIndex(self):
            return ECLsubsetParser.RULE_compoundexpressionconstraint

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitCompoundexpressionconstraint"):
                return visitor.visitCompoundexpressionconstraint(self)
            else:
                return visitor.visitChildren(self)

    def compoundexpressionconstraint(self):

        localctx = ECLsubsetParser.CompoundexpressionconstraintContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 2, self.RULE_compoundexpressionconstraint)
        try:
            self.state = 81
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 1, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.disjunctionexpressionconstraint()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.exclusionexpressionconstraint()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DisjunctionexpressionconstraintContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subexpressionconstraint(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    ECLsubsetParser.SubexpressionconstraintContext
                )
            else:
                return self.getTypedRuleContext(
                    ECLsubsetParser.SubexpressionconstraintContext, i
                )

        def ws(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ECLsubsetParser.WsContext)
            else:
                return self.getTypedRuleContext(ECLsubsetParser.WsContext, i)

        def disjunction(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ECLsubsetParser.DisjunctionContext)
            else:
                return self.getTypedRuleContext(ECLsubsetParser.DisjunctionContext, i)

        def getRuleIndex(self):
            return ECLsubsetParser.RULE_disjunctionexpressionconstraint

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDisjunctionexpressionconstraint"):
                return visitor.visitDisjunctionexpressionconstraint(self)
            else:
                return visitor.visitChildren(self)

    def disjunctionexpressionconstraint(self):

        localctx = ECLsubsetParser.DisjunctionexpressionconstraintContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 4, self.RULE_disjunctionexpressionconstraint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.subexpressionconstraint()
            self.state = 89
            self._errHandler.sync(self)
            _alt = 1
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 84
                    self.ws()
                    self.state = 85
                    self.disjunction()
                    self.state = 86
                    self.ws()
                    self.state = 87
                    self.subexpressionconstraint()

                else:
                    raise NoViableAltException(self)
                self.state = 91
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 2, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExclusionexpressionconstraintContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subexpressionconstraint(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(
                    ECLsubsetParser.SubexpressionconstraintContext
                )
            else:
                return self.getTypedRuleContext(
                    ECLsubsetParser.SubexpressionconstraintContext, i
                )

        def ws(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ECLsubsetParser.WsContext)
            else:
                return self.getTypedRuleContext(ECLsubsetParser.WsContext, i)

        def exclusion(self):
            return self.getTypedRuleContext(ECLsubsetParser.ExclusionContext, 0)

        def getRuleIndex(self):
            return ECLsubsetParser.RULE_exclusionexpressionconstraint

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitExclusionexpressionconstraint"):
                return visitor.visitExclusionexpressionconstraint(self)
            else:
                return visitor.visitChildren(self)

    def exclusionexpressionconstraint(self):

        localctx = ECLsubsetParser.ExclusionexpressionconstraintContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 6, self.RULE_exclusionexpressionconstraint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.subexpressionconstraint()
            self.state = 94
            self.ws()
            self.state = 95
            self.exclusion()
            self.state = 96
            self.ws()
            self.state = 97
            self.subexpressionconstraint()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SubexpressionconstraintContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def eclfocusconcept(self):
            return self.getTypedRuleContext(ECLsubsetParser.EclfocusconceptContext, 0)

        def constraintoperator(self):
            return self.getTypedRuleContext(
                ECLsubsetParser.ConstraintoperatorContext, 0
            )

        def ws(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ECLsubsetParser.WsContext)
            else:
                return self.getTypedRuleContext(ECLsubsetParser.WsContext, i)

        def LEFT_PAREN(self):
            return self.getToken(ECLsubsetParser.LEFT_PAREN, 0)

        def expressionconstraint(self):
            return self.getTypedRuleContext(
                ECLsubsetParser.ExpressionconstraintContext, 0
            )

        def RIGHT_PAREN(self):
            return self.getToken(ECLsubsetParser.RIGHT_PAREN, 0)

        def getRuleIndex(self):
            return ECLsubsetParser.RULE_subexpressionconstraint

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSubexpressionconstraint"):
                return visitor.visitSubexpressionconstraint(self)
            else:
                return visitor.visitChildren(self)

    def subexpressionconstraint(self):

        localctx = ECLsubsetParser.SubexpressionconstraintContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 8, self.RULE_subexpressionconstraint)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == ECLsubsetParser.LESS_THAN or _la == ECLsubsetParser.GREATER_THAN:
                self.state = 99
                self.constraintoperator()
                self.state = 100
                self.ws()

            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [
                ECLsubsetParser.ONE,
                ECLsubsetParser.TWO,
                ECLsubsetParser.THREE,
                ECLsubsetParser.FOUR,
                ECLsubsetParser.FIVE,
                ECLsubsetParser.SIX,
                ECLsubsetParser.SEVEN,
                ECLsubsetParser.EIGHT,
                ECLsubsetParser.NINE,
            ]:
                self.state = 104
                self.eclfocusconcept()
                pass
            elif token in [ECLsubsetParser.LEFT_PAREN]:
                self.state = 105
                self.match(ECLsubsetParser.LEFT_PAREN)
                self.state = 106
                self.ws()
                self.state = 107
                self.expressionconstraint()
                self.state = 108
                self.ws()
                self.state = 109
                self.match(ECLsubsetParser.RIGHT_PAREN)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EclfocusconceptContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def eclconceptreference(self):
            return self.getTypedRuleContext(
                ECLsubsetParser.EclconceptreferenceContext, 0
            )

        def getRuleIndex(self):
            return ECLsubsetParser.RULE_eclfocusconcept

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitEclfocusconcept"):
                return visitor.visitEclfocusconcept(self)
            else:
                return visitor.visitChildren(self)

    def eclfocusconcept(self):

        localctx = ECLsubsetParser.EclfocusconceptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_eclfocusconcept)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.eclconceptreference()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EclconceptreferenceContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conceptid(self):
            return self.getTypedRuleContext(ECLsubsetParser.ConceptidContext, 0)

        def getRuleIndex(self):
            return ECLsubsetParser.RULE_eclconceptreference

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitEclconceptreference"):
                return visitor.visitEclconceptreference(self)
            else:
                return visitor.visitChildren(self)

    def eclconceptreference(self):

        localctx = ECLsubsetParser.EclconceptreferenceContext(
            self, self._ctx, self.state
        )
        self.enterRule(localctx, 12, self.RULE_eclconceptreference)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            self.conceptid()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConceptidContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sctid(self):
            return self.getTypedRuleContext(ECLsubsetParser.SctidContext, 0)

        def getRuleIndex(self):
            return ECLsubsetParser.RULE_conceptid

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitConceptid"):
                return visitor.visitConceptid(self)
            else:
                return visitor.visitChildren(self)

    def conceptid(self):

        localctx = ECLsubsetParser.ConceptidContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_conceptid)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.sctid()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConstraintoperatorContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def childof(self):
            return self.getTypedRuleContext(ECLsubsetParser.ChildofContext, 0)

        def descendantorselfof(self):
            return self.getTypedRuleContext(
                ECLsubsetParser.DescendantorselfofContext, 0
            )

        def descendantof(self):
            return self.getTypedRuleContext(ECLsubsetParser.DescendantofContext, 0)

        def parentof(self):
            return self.getTypedRuleContext(ECLsubsetParser.ParentofContext, 0)

        def ancestororselfof(self):
            return self.getTypedRuleContext(ECLsubsetParser.AncestororselfofContext, 0)

        def ancestorof(self):
            return self.getTypedRuleContext(ECLsubsetParser.AncestorofContext, 0)

        def getRuleIndex(self):
            return ECLsubsetParser.RULE_constraintoperator
